Page4 fixed width, z-index bug

--- a/css/front.css
+++ b/css/front.css
@@ -8,7 +8,7 @@ a{color: rgb(129, 128, 128);text-decoration:none;}
 a:hover{color:#5e5e5e;}
 #menu-icon{position:absolute;top:20px;right:30px;background:url(../images/vmenu.png) no-repeat center center;height:30px;width:30px;cursor:pointer;}
 #holder{position:relative;}
-#top{position:fixed;width:100%;top:105px;}
+#top{position:fixed;width:100%;top:105px;z-index:1000;}
 #top-langs{text-align:right;}
 #langs{font-size:12px;list-style:none;color:#fff;max-height:20px;float:right;}
 #langs li{font-family:custom;float:left;min-width:35px;max-width:35px;text-align:center;border-right:1px solid #fff;background:#666;padding:4px;height:20px;text-transform:uppercase;line-height:22px;font-size:12px;max-height:20px;}
@@ -18,7 +18,7 @@ a:hover{color:#5e5e5e;}
 #langs a{color:#fff;text-decoration:none;}
 
 
-#header{margin:0 0 100px 0;background:#fff url(../images/line_sep.png) no-repeat bottom center;padding:0;height:115px;position:fixed;}
+#header{margin:0 0 100px 0;background:#fff url(../images/line_sep.png) no-repeat bottom center;padding:0;height:115px;position:fixed;z-index:1000;}
 #header ul{list-style:none;margin:0 auto;padding:0;border:0;outline:0;max-width:960px;width:100%;height:71px;}
 #header ul li:hover{color:rgba(255,255,255,1);}
 
@@ -37,6 +37,7 @@ a:hover{color:#5e5e5e;}
 #page4 div .logo{padding:0;margin:20px 0 0 0;background:url(../images/logo_kontakt.png) no-repeat left center;height:75px;}
 #page4 #email{font-weight:normal;text-decoration:underline;}
 #page4 .karta{height:310px;}
+#map-canvas{z-index:10;}
 .footer{background:#efefef;margin:0;padding:2px 50px 4px 50px;color:red;}
 .footer p{}
 .powered{float:right;}
